# zebu

./: .gitignore  .gitmodules  Makefile  README.md  config_register.v  rom.v  serclk_generator.v  shiftreg_in.v  shiftreg_out.v  simulator.cpp  simulator.gtkw  simulator.v  sram.v  testbench.hpp  z80.v  z80_bus_controller.qsf  z80_bus_controller.sdc  z80_bus_controller.v  z80_bus_controller_core.v  z80_mmu.v  z80_mmu_tb.gtkw  z80_mmu_tb.v  z80_spimaster.v  z80_spimaster_tb.gtkw  z80_spimaster_tb.v  z80_waitstate_generator.v  z80_waitstate_generator_tb.gtkw  z80_waitstate_generator_tb.v  zebu.qpf
bios/: bios.asm
filters/: device_select.flt  simulator.gtkw
sim/: CMakeLists.txt  Makefile  log.hpp  simulator.cpp  simulator.hpp  simulator.sh  simulator.v  simulator_base.hpp  simulator_clock.hpp  simulator_driver.cpp  simulator_driver.hpp  simulator_driver_cli.cpp  simulator_message.hpp  simulator_properties.hpp  simulator_system.hpp  tb_clock.hpp  testbench.hpp
sim/systems/uart/: uart_system.cpp  uart_system.hpp
sim/systems/video/: video_mode.hpp  video_system.cpp  video_system.hpp
sim/targets/zebusim/: zebusim.cpp
sim/uart/: fooart_core.v  uart_driver_stdio.hpp  uart_simulator.hpp
tests/: z80_mmu_tb.v  z80_spimaster_tb.v  z80_waitstate_generator_tb.v
uart/: fooart_core.v  uart_driver.hpp  uart_driver_stdio.cpp  uart_simulator.cpp
